swagger PetBreedController
